chore: replace web search content retriever by a tool (#109)
* feat: enable RAG feature with indexing and gutter icon integration

* feat: enable web search functionality using DuckDuckGo API

* fix: handle json deserialization exceptions